--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         .navbar .buttons a {
             text-decoration: none;
             color: white;
-            border: 2px solid transparent;
+            border: none;
             padding: 8px 20px;
             border-radius: 5px;
             cursor: pointer;
