--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         .navbar .buttons a {
             text-decoration: none;
             color: white;
-            border: none;
+            border:  2px solid transparent;
             padding: 8px 20px;
-            border-radius: 5px;
+            border-radius: 0;
             cursor: pointer;
             transition: background-color 0.3s, color 0.3s, border-color 0.3s;
         }
