--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 
     <footer>
         <div class="footer-icons">
-            <a href="#" target="_blank" class="fab fa-facebook-f"> </a>
+            <a href="https://www.facebook.com/louigie.felix.5?mibextid=kFxxJD" target="_blank" class="fab fa-facebook-f"> </a>
             <a href="#" target="_blank" class="fab fa-instagram"> </a>
             <a href="#" target="_blank" class="fab fa-linkedin-in"> </a>
             <a href="#" target="_blank" class="fab fa-whatsapp"> </a>
