--- a/index.html
+++ b/index.html
@@ -238,7 +238,8 @@
     <footer>
         <div class="footer-icons">
             <a href="https://www.facebook.com/louigie.felix.5?mibextid=kFxxJD" target="_blank" class="fab fa-facebook-f"> </a>
-            <a href="#" target="_blank" class="fab fa-instagram"> </a>
+            <a href="https://www.instagram.com/felixlouigie?igsh=cmtrdmluYzAwZjNy&utm_source=qr
+" target="_blank" class="fab fa-instagram"> </a>
             <a href="#" target="_blank" class="fab fa-linkedin-in"> </a>
             <a href="#" target="_blank" class="fab fa-whatsapp"> </a>
         </div>
