--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Louigie Felix</title>
+    <title>Louigie Felix's Website</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
@@ -115,9 +115,8 @@
             }
         }
 
-        /* Section styles */
         section {
-            padding: 120px 20px;
+            padding: 80px 20px 20px; /* Adjusted padding to move gallery up */
             min-height: 100vh;
             color: white;
             text-align: center;
@@ -140,12 +139,13 @@
         }
 
         section h1 {
-            font-size: 48px;
-            margin-bottom: 20px;
+            font-size: 40px;
+            margin-bottom: 10px;
         }
 
         section p {
-            font-size: 24px;
+            font-size: 20px;
+            margin-bottom: 30px; /* Reduced margin for better fit */
         }
 
         .btn-download {
@@ -159,7 +159,7 @@
             transition: background-color 0.3s, color 0.3s;
             text-decoration: none;
             display: inline-block;
-            margin-top: 20px;
+            margin-bottom: 30px; /* Added space below button */
         }
 
         .btn-download:hover {
@@ -167,16 +167,71 @@
             color: white;
         }
 
-        @media (max-width: 768px) {
-            .btn-download {
-                padding: 10px 20px;
-                font-size: 16px;
-                display: block;
-                margin: 20px auto;
-            }
-        }
+        /* Picture Gallery */
+        .picture-gallery {
+    position: relative;
+    width: 100%;
+    height: 300px; /* Adjusted height */
+    overflow: hidden;
+    margin: 0 auto;
+}
 
-        /* Footer styles */
+.picture-gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: none;
+}
+
+.gallery-nav {
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    transform: translateY(-50%);
+    pointer-events: none;
+}
+
+.gallery-nav span {
+    font-size: 30px;
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+    padding: 10px;
+    cursor: pointer;
+    pointer-events: auto;
+}
+
+.indicator-dots {
+    text-align: center;
+    padding: 10px 0;
+}
+
+.indicator-dots .dot {
+    height: 12px;
+    width: 12px;
+    margin: 0 2px;
+    background-color: white;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.indicator-dots .dot.active {
+    background-color: rgb(63, 178, 171);
+}
+
+/* Remove gallery navigation buttons on mobile */
+@media (max-width: 768px) {
+    .gallery-nav {
+        display: none;
+    }
+
+    .picture-gallery img {
+        display: block; /* Ensure images are visible */
+    }
+}
+
         footer {
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
@@ -221,9 +276,30 @@
 
     <section id="home">
         <h1>Welcome to the Home Page</h1>
-        <p>This is the main page of Louigie Felix's website.</p>
+        <p>This is where you introduce yourself and your website.</p>
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
+        <div class="picture-gallery">
+            <img src="https://via.placeholder.com/1200x300?text=Picture+1" alt="Picture 1">
+            <img src="https://via.placeholder.com/1200x300?text=Picture+2" alt="Picture 2">
+            <img src="https://via.placeholder.com/1200x300?text=Picture+3" alt="Picture 3">
+            <img src="https://via.placeholder.com/1200x300?text=Picture+4" alt="Picture 4">
+            <img src="https://via.placeholder.com/1200x300?text=Picture+5" alt="Picture 5">
+            <img src="https://via.placeholder.com/1200x300?text=Picture+6" alt="Picture 6">
+            <div class="gallery-nav">
+                <span class="prev" onclick="prevSlide()">&#10094;</span>
+                <span class="next" onclick="nextSlide()">&#10095;</span>
+            </div>
+            <div class="indicator-dots">
+                <span onclick="currentSlide(1)" class="dot"></span>
+                <span onclick="currentSlide(2)" class="dot"></span>
+                <span onclick="currentSlide(3)" class="dot"></span>
+                <span onclick="currentSlide(4)" class="dot"></span>
+                <span onclick="currentSlide(5)" class="dot"></span>
+                <span onclick="currentSlide(6)" class="dot"></span>
+            </div>
+        </div>
     </section>
+    
 
     <section id="about">
         <h1>About Me</h1>
@@ -237,41 +313,78 @@
 
     <footer>
         <div class="footer-icons">
-            <a href="https://www.facebook.com/louigie.felix.5?mibextid=kFxxJD" target="_blank" class="fab fa-facebook-f"> </a>
-            <a href="https://www.instagram.com/felixlouigie?igsh=cmtrdmluYzAwZjNy&utm_source=qr
-" target="_blank" class="fab fa-instagram"> </a>
-            <a href="#" target="_blank" class="fab fa-linkedin-in"> </a>
-            <a href="#" target="_blank" class="fab fa-whatsapp"> </a>
+            <a href="#" target="_blank" class="fab fa-facebook-f"></a>
+            <a href="#" target="_blank" class="fab fa-instagram"></a>
+            <a href="#" target="_blank" class="fab fa-linkedin-in"></a>
+            <a href="#" target="_blank" class="fab fa-whatsapp"></a>
         </div>
         <p>&copy; 2024 Louigie Felix. All rights reserved.</p>
     </footer>
 
     <script>
-        function toggleMenu() {
-            const buttons = document.querySelector('.navbar .buttons');
-            buttons.classList.toggle('responsive');
-            buttons.classList.toggle('show');
-        }
+       let slideIndex = 0;
+const slides = document.querySelectorAll('.picture-gallery img');
+const dots = document.querySelectorAll('.indicator-dots .dot');
 
-        // Smooth transition effect when scrolling to each section
-        document.querySelectorAll('.navbar a').forEach(anchor => {
-            anchor.addEventListener('click', function (e) {
-                e.preventDefault();
+function showSlide(n) {
+    if (n >= slides.length) slideIndex = 0;
+    if (n < 0) slideIndex = slides.length - 1;
+    slides.forEach(slide => slide.style.display = 'none');
+    dots.forEach(dot => dot.classList.remove('active'));
+    slides[slideIndex].style.display = 'block';
+    dots[slideIndex].classList.add('active');
+}
 
-                const targetSection = document.querySelector(this.getAttribute('href'));
-                document.querySelectorAll('section').forEach(section => {
-                    section.style.opacity = 0; // Fade out all sections
-                });
+function nextSlide() {
+    showSlide(slideIndex += 1);
+}
 
-                setTimeout(() => {
-                    window.scrollTo({
-                        top: targetSection.offsetTop,
-                        behavior: 'smooth'
-                    });
-                    targetSection.style.opacity = 1; // Fade in the target section
-                }, 300);
-            });
+function prevSlide() {
+    showSlide(slideIndex -= 1);
+}
+
+function currentSlide(n) {
+    showSlide(slideIndex = n - 1);
+}
+
+setInterval(nextSlide, 7000); // Change slide every 7 seconds
+
+// Initialize
+showSlide(slideIndex);
+
+// Smooth transition effect when scrolling to each section
+document.querySelectorAll('.navbar a').forEach(anchor => {
+    anchor.addEventListener('click', function (e) {
+        e.preventDefault();
+
+        const targetSection = document.querySelector(this.getAttribute('href'));
+        document.querySelectorAll('section').forEach(section => {
+            section.style.opacity = 0; // Fade out all sections
         });
+
+        setTimeout(() => {
+            window.scrollTo({
+                top: targetSection.offsetTop,
+                behavior: 'smooth'
+            });
+            targetSection.style.opacity = 1; // Fade in the target section
+        }, 500);
+    });
+});
+
+// Enable swipe functionality on mobile
+let startX, endX;
+
+document.querySelector('.picture-gallery').addEventListener('touchstart', (e) => {
+    startX = e.touches[0].clientX;
+});
+
+document.querySelector('.picture-gallery').addEventListener('touchend', (e) => {
+    endX = e.changedTouches[0].clientX;
+    if (startX > endX + 50) nextSlide(); // Swipe left
+    if (startX < endX - 50) prevSlide(); // Swipe right
+});
+
     </script>
 </body>
 </html>
