--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
         <p>This is where you introduce yourself and your website.</p>
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
         <div class="picture-gallery">
-            <img src="https://via.placeholder.com/1200x300?text=Picture+1" alt="Picture 1">
+            <img src="omsc.logo (1).png" alt="Picture 1">
             <img src="https://via.placeholder.com/1200x300?text=Picture+2" alt="Picture 2">
             <img src="https://via.placeholder.com/1200x300?text=Picture+3" alt="Picture 3">
             <img src="https://via.placeholder.com/1200x300?text=Picture+4" alt="Picture 4">
