--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
     </nav>
 
     <section id="home">
-        <h1>Welcome to the Home Page</h1>
-        <p>This is where you introduce yourself and your website.</p>
+        <h1>LOUIGIE FELIX</h1>
+        <p>Hello! I'm Louigie Felix, a passionate and driven Information Technology graduate specializing in Windows application development using C#.NET, Python, and Oracle Database. My journey in tech has been fueled by a love for solving problems through innovative software solutions and a keen eye for web design. Whether I'm crafting user-friendly desktop applications or designing responsive and visually appealing websites, I strive to merge functionality with creativity. Explore my portfolio to see how I bring ideas to life through code and design!e.</p>
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
         <div class="picture-gallery">
             <img src="6251049781359131287.jpg" alt="Picture 1">
