--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             background-color: rgba(0, 0, 0, 0.2);
             padding: 8px 20px;
             border-radius: 5px;
-            cursor: pointer;
             transition: background-color 0.3s, color 0.3s;
         }
 
@@ -68,31 +67,6 @@
             height: 3px;
             background-color: white;
             margin: 5px 0;
-            transition: 0.4s;
-        }
-
-        .navbar .buttons.responsive {
-            flex-direction: column;
-            position: absolute;
-            top: 60px;
-            left: 0;
-            width: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            display: none;
-            z-index: 999;
-        }
-
-        .navbar .buttons.responsive a {
-            width: 100%;
-            margin: 0;
-            padding: 15px;
-            text-align: left;
-            background-color: transparent;
-            color: white;
-        }
-
-        .navbar .buttons.show {
-            display: flex;
         }
 
         @media (max-width: 768px) {
@@ -105,29 +79,26 @@
             }
 
             .navbar .buttons.responsive {
-                display: flex;
-            }
-
-            .navbar .buttons a {
-                padding: 15px;
+                flex-direction: column;
+                position: absolute;
+                top: 60px;
+                left: 0;
                 width: 100%;
-                text-align: center;
+                background-color: rgba(0, 0, 0, 0.9);
+                display: flex;
             }
         }
 
         section {
-            padding: 80px 20px 20px; /* Adjusted padding to move gallery up */
+            padding: 80px 20px 20px;
             min-height: 100vh;
             color: white;
             text-align: center;
-            transition: opacity 0.5s ease-in-out;
-            opacity: 0;
             flex: 1;
         }
 
         #home {
             background-color: rgb(63, 178, 171);
-            opacity: 1;
         }
 
         #about {
@@ -138,28 +109,15 @@
             background-color: rgb(40, 110, 106);
         }
 
-        section h1 {
-            font-size: 40px;
-            margin-bottom: 10px;
-        }
-
-        section p {
-            font-size: 20px;
-            margin-bottom: 30px; /* Reduced margin for better fit */
-        }
-
         .btn-download {
             background-color: white;
             color: rgb(63, 178, 171);
-            border: none;
             padding: 15px 30px;
             font-size: 20px;
             border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s, color 0.3s;
             text-decoration: none;
+            margin-bottom: 30px;
             display: inline-block;
-            margin-bottom: 30px; /* Added space below button */
         }
 
         .btn-download:hover {
@@ -167,91 +125,70 @@
             color: white;
         }
 
-        /* Picture Gallery */
         .picture-gallery {
-    position: relative;
-    width: 100%;
-    height: 300px; /* Adjusted height */
-    overflow: hidden;
-    margin: 0 auto;
-}
+            position: relative;
+            width: 100%;
+            height: 0;
+            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            overflow: hidden;
+        }
 
-.picture-gallery img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    display: none;
-}
+        .picture-gallery img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            display: none;
+        }
 
-.gallery-nav {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-    pointer-events: none;
-}
+        .gallery-nav {
+            position: absolute;
+            top: 50%;
+            width: 100%;
+            display: flex;
+            justify-content: space-between;
+            transform: translateY(-50%);
+        }
 
-.gallery-nav span {
-    font-size: 30px;
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    padding: 10px;
-    cursor: pointer;
-    pointer-events: auto;
-}
+        .gallery-nav span {
+            font-size: 30px;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            padding: 10px;
+            cursor: pointer;
+        }
 
-.indicator-dots {
-    text-align: center;
-    padding: 10px 0;
-}
+        .indicator-dots {
+            text-align: center;
+            padding: 10px 0;
+        }
 
-.indicator-dots .dot {
-    height: 12px;
-    width: 12px;
-    margin: 0 2px;
-    background-color: white;
-    border-radius: 50%;
-    display: inline-block;
-    transition: background-color 0.6s ease;
-}
+        .indicator-dots .dot {
+            height: 12px;
+            width: 12px;
+            margin: 0 2px;
+            background-color: white;
+            border-radius: 50%;
+            display: inline-block;
+        }
 
-.indicator-dots .dot.active {
-    background-color: rgb(63, 178, 171);
-}
-
-/* Remove gallery navigation buttons on mobile */
-@media (max-width: 768px) {
-    .gallery-nav {
-        display: none;
-    }
-
-    .picture-gallery img {
-        display: block; /* Ensure images are visible */
-    }
-}
+        .indicator-dots .dot.active {
+            background-color: rgb(63, 178, 171);
+        }
 
         footer {
             background-color: rgba(0, 0, 0, 0.8);
             color: white;
             padding: 20px 0;
             text-align: center;
-            width: 100%;
-            box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.3);
-            margin-top: auto;
-        }
-
-        .footer-icons {
-            margin: 10px 0;
         }
 
         .footer-icons a {
             color: white;
             font-size: 24px;
             margin: 0 10px;
-            transition: color 0.3s;
-            text-decoration: none;
         }
 
         .footer-icons a:hover {
@@ -275,31 +212,23 @@
     </nav>
 
     <section id="home">
-        <h1>LOUIGIE FELIX</h1>
-        <p>Hello! I'm Louigie Felix, a passionate and driven Information Technology graduate specializing in Windows application development using C#.NET, Python, and Oracle Database. My journey in tech has been fueled by a love for solving problems through innovative software solutions and a keen eye for web design. Whether I'm crafting user-friendly desktop applications or designing responsive and visually appealing websites, I strive to merge functionality with creativity. Explore my portfolio to see how I bring ideas to life through code and design!e.</p>
+        <h1>Welcome to the Home Page</h1>
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
         <div class="picture-gallery">
-            <img src="6251049781359131287.jpg" alt="Picture 1">
-            <img src="https://via.placeholder.com/1200x300?text=Picture+2" alt="Picture 2">
-            <img src="https://via.placeholder.com/1200x300?text=Picture+3" alt="Picture 3">
-            <img src="https://via.placeholder.com/1200x300?text=Picture+4" alt="Picture 4">
-            <img src="https://via.placeholder.com/1200x300?text=Picture+5" alt="Picture 5">
-            <img src="https://via.placeholder.com/1200x300?text=Picture+6" alt="Picture 6">
+            <img src="https://via.placeholder.com/1200x675?text=Picture+1" alt="Picture 1">
+            <img src="https://via.placeholder.com/1200x675?text=Picture+2" alt="Picture 2">
+            <img src="https://via.placeholder.com/1200x675?text=Picture+3" alt="Picture 3">
             <div class="gallery-nav">
-                <span class="prev" onclick="prevSlide()">&#10094;</span>
-                <span class="next" onclick="nextSlide()">&#10095;</span>
+                <span onclick="prevSlide()">&#10094;</span>
+                <span onclick="nextSlide()">&#10095;</span>
             </div>
             <div class="indicator-dots">
-                <span onclick="currentSlide(1)" class="dot"></span>
-                <span onclick="currentSlide(2)" class="dot"></span>
-                <span onclick="currentSlide(3)" class="dot"></span>
-                <span onclick="currentSlide(4)" class="dot"></span>
-                <span onclick="currentSlide(5)" class="dot"></span>
-                <span onclick="currentSlide(6)" class="dot"></span>
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
             </div>
         </div>
     </section>
-    
 
     <section id="about">
         <h1>About Me</h1>
@@ -313,78 +242,47 @@
 
     <footer>
         <div class="footer-icons">
-            <a href="#" target="_blank" class="fab fa-facebook-f"></a>
-            <a href="#" target="_blank" class="fab fa-instagram"></a>
-            <a href="#" target="_blank" class="fab fa-linkedin-in"></a>
-            <a href="#" target="_blank" class="fab fa-whatsapp"></a>
+            <a href="#" class="fab fa-facebook-f"></a>
+            <a href="#" class="fab fa-instagram"></a>
+            <a href="#" class="fab fa-linkedin-in"></a>
+            <a href="#" class="fab fa-whatsapp"></a>
         </div>
         <p>&copy; 2024 Louigie Felix. All rights reserved.</p>
     </footer>
 
     <script>
-       let slideIndex = 0;
-const slides = document.querySelectorAll('.picture-gallery img');
-const dots = document.querySelectorAll('.indicator-dots .dot');
+        let slideIndex = 0;
+        const slides = document.querySelectorAll('.picture-gallery img');
+        const dots = document.querySelectorAll('.indicator-dots .dot');
 
-function showSlide(n) {
-    if (n >= slides.length) slideIndex = 0;
-    if (n < 0) slideIndex = slides.length - 1;
-    slides.forEach(slide => slide.style.display = 'none');
-    dots.forEach(dot => dot.classList.remove('active'));
-    slides[slideIndex].style.display = 'block';
-    dots[slideIndex].classList.add('active');
-}
+        function showSlide(n) {
+            if (n >= slides.length) slideIndex = 0;
+            if (n < 0) slideIndex = slides.length - 1;
+            slides.forEach(slide => slide.style.display = 'none');
+            dots.forEach(dot => dot.classList.remove('active'));
+            slides[slideIndex].style.display = 'block';
+            dots[slideIndex].classList.add('active');
+        }
 
-function nextSlide() {
-    showSlide(slideIndex += 1);
-}
+        function nextSlide() {
+            showSlide(++slideIndex);
+        }
 
-function prevSlide() {
-    showSlide(slideIndex -= 1);
-}
+        function prevSlide() {
+            showSlide(--slideIndex);
+        }
 
-function currentSlide(n) {
-    showSlide(slideIndex = n - 1);
-}
+        function currentSlide(n) {
+            showSlide(slideIndex = n - 1);
+        }
 
-setInterval(nextSlide, 7000); // Change slide every 7 seconds
+        setInterval(nextSlide, 7000); // Auto-slide every 7 seconds
+        showSlide(slideIndex);
 
-// Initialize
-showSlide(slideIndex);
-
-// Smooth transition effect when scrolling to each section
-document.querySelectorAll('.navbar a').forEach(anchor => {
-    anchor.addEventListener('click', function (e) {
-        e.preventDefault();
-
-        const targetSection = document.querySelector(this.getAttribute('href'));
-        document.querySelectorAll('section').forEach(section => {
-            section.style.opacity = 0; // Fade out all sections
-        });
-
-        setTimeout(() => {
-            window.scrollTo({
-                top: targetSection.offsetTop,
-                behavior: 'smooth'
-            });
-            targetSection.style.opacity = 1; // Fade in the target section
-        }, 500);
-    });
-});
-
-// Enable swipe functionality on mobile
-let startX, endX;
-
-document.querySelector('.picture-gallery').addEventListener('touchstart', (e) => {
-    startX = e.touches[0].clientX;
-});
-
-document.querySelector('.picture-gallery').addEventListener('touchend', (e) => {
-    endX = e.changedTouches[0].clientX;
-    if (startX > endX + 50) nextSlide(); // Swipe left
-    if (startX < endX - 50) prevSlide(); // Swipe right
-});
-
+        function toggleMenu() {
+            const buttons = document.querySelector('.navbar .buttons');
+            buttons.classList.toggle('responsive');
+        }
     </script>
 </body>
 </html>
