--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <h1>Welcome to the Home Page</h1>
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
         <div class="picture-gallery">
-            <img src="https://via.placeholder.com/1200x675?text=Picture+1" alt="Picture 1">
+            <img src="6251049781359131287.jpg=Picture+1" alt="Picture 1">
             <img src="https://via.placeholder.com/1200x675?text=Picture+2" alt="Picture 2">
             <img src="https://via.placeholder.com/1200x675?text=Picture+3" alt="Picture 3">
             <div class="gallery-nav">
