--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="name">LOUIGIE FELIX</div>
         <div class="buttons">
             <a href="#home">Home</a>
-            <a href="#about">About</a>
+            <a href="#about">Me</a>
             <a href="#info">Info</a>
         </div>
         <div class="hamburger" onclick="toggleMenu()">
@@ -212,7 +212,7 @@
     </nav>
 
     <section id="home">
-        <h1>Welcome to the Home Page</h1>
+        <h1>We are Home</h1>
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
         <div class="picture-gallery">
             <img src="omsc.logo (1).png" alt="Picture 1">
@@ -231,13 +231,13 @@
     </section>
 
     <section id="about">
-        <h1>About Me</h1>
-        <p>This page provides information about Louigie Felix.</p>
+        <h1>Me</h1>
+        <p>Information about me.</p>
     </section>
 
     <section id="info">
-        <h1>Info Page</h1>
-        <p>This page contains additional information about Louigie Felix.</p>
+        <h1>Info</h1>
+        <p>Career Highlights.</p>
     </section>
 
     <footer>
