--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         .picture-gallery {
             position: relative;
             width: 100%;
-            height: 0;
-            padding-bottom: 56.25%; /* 16:9 aspect ratio */
+            aspect-ratio: 16 / 9; /* Default to 16:9 */
+            max-width: 100%;
             overflow: hidden;
         }
 
@@ -139,7 +139,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: contain;
             display: none;
         }
 
@@ -201,7 +201,7 @@
         <div class="name">LOUIGIE FELIX</div>
         <div class="buttons">
             <a href="#home">Home</a>
-            <a href="#about">Me</a>
+            <a href="#about">About Me</a>
             <a href="#info">Info</a>
         </div>
         <div class="hamburger" onclick="toggleMenu()">
@@ -212,7 +212,7 @@
     </nav>
 
     <section id="home">
-        <h1>We are Home</h1>
+        <h1>Welcome to Home</h1>
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
         <div class="picture-gallery">
             <img src="omsc.logo (1).png" alt="Picture 1">
@@ -231,13 +231,13 @@
     </section>
 
     <section id="about">
-        <h1>Me</h1>
-        <p>Information about me.</p>
+        <h1>About Me</h1>
+        <p>This is the About section. Here you can talk about yourself and your journey.</p>
     </section>
 
     <section id="info">
         <h1>Info</h1>
-        <p>Career Highlights.</p>
+        <p>This section contains additional information, such as skills, certificates, and projects.</p>
     </section>
 
     <footer>
