--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <a href="https://drive.google.com/file/d/1xCpPJmsV3MotvM97Yyw0g4eYUtEuckR1/view?usp=sharing" class="btn-download" target="_blank">Download CV</a>
         <div class="picture-gallery">
             <img src="omsc.logo (1).png" alt="Picture 1">
-            <img src="https://via.placeholder.com/1200x675?text=Picture+2" alt="Picture 2">
+            <img src="last.jpg" alt="Picture 2">
             <img src="https://via.placeholder.com/1200x675?text=Picture+3" alt="Picture 3">
             <div class="gallery-nav">
                 <span onclick="prevSlide()">&#10094;</span>
